= Counterclockwise ChangeLog 
Laurent Petit <laurent dot petit at gmail dot com>
:sectanchors:
:sectlinks:
:source-highlighter: coderay
:experimental:
:toc: 
:toc-title!:
:toclevels: 0

== Changes between Counterclockwise 0.31.0 and 0.31.1

`0.31.1` released on December xx, 2014

== Changes between Counterclockwise 0.30.0 and 0.31.0

`0.31.0` released on December 4, 2014

=== Fix
- Removed lots of workspace locks when managing leiningen dependencies (after importing a project, after editing project.clj) which were really annoying because it was then impossible to save a file because the background leiningen job had a lock on the workspace. Fix #Issue 671 - Update leiningen dependencies should not block the workspace that long
- Eclipse source folders could not be correctly set when some Leiningen plugins were placing jar files external to the project in the source folders list. Fix Issue #675 - Could not reset project classpath NPE

=== User Plugins
==== Feature

- Added namespace `ccw.api.repl` for use by user plugins. Related to REPL management (sending expressions for evaluation, getting/setting the current namespace).
- Added namespace `ccw.events` which is a thin wrapper around Eclipse 4 IEventBroker, allowing User plugin developers to subscribe to topics, post / send data to topics.
- `defhandler` now accepts closures in addition to var symbols.
- in `defkeybinding`, `Cmd` is now an alias for `M1`, thus making it OS portable (`Cmd` will be replaced to `COMMAND` for OS X, and `Ctrl` for Windows/Linux). If you really insist on being specific, you can you `COMMAND` or `CTRL` which are not interpreted.

==== Fix
- commands/handlers/keybindings were not properly removed when all user plugins were removed at once (e.g. ~/.ccw/ was renamed to ~/.ccw-disabled)
- `defhandler` does not create a new var named after the command (with a '-handler' suffix) anymore
- `defkeybinding` correctly interprets the :context key