@@ -41,6 +41,24 @@
        (defhandler ~command (fn ~arg-vec ~@body))
        (defkeybinding ~command ~keybinding))))
 
+(defn- wrap-context
+  "Wrap the Eclipse IContext so that:
+   - destructuring is possible (extend clojure.lang.ILookup)
+   - in addition to Strings and Classes, keywords referencing entries in
+     ccw.e4.model/service-constants can be used"
+  [eclipse-context]
+  (reify clojure.lang.ILookup
+    (valAt [this k]
+      (if (or (= k :eclipse-context)
+              (= k "org.eclipse.e4.core.contexts.IEclipseContext"))
+        eclipse-context
+        (m/context-key eclipse-context k)))
+    (valAt [this k default-k]
+      (if (or (= k :eclipse-context)
+              (= k "org.eclipse.e4.core.contexts.IEclipseContext"))
+        eclipse-context
+        (m/context-key eclipse-context k default-k)))))
+
 ;;; TODO register for deletion in  m/*elements* (a set)
 (defmacro defhandler
   "Defines a handler for the command. Takes a single additional argument
@@ -59,7 +77,7 @@
        ~(when create-var?
           `(def ~var-symbol
              ~(str "Var generated by CCW to hold the closure " var-symbol-or-closure)
-             ~var-symbol-or-closure))
+             (fn [context#] (~var-symbol-or-closure (#'wrap-context context#)))))
        (let [spec# (-> {:contribution-URI ~platform-uri
                         :command ~cmd-id
                         :id ~id}
